--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    width: 70vw;
+    width: 70%;
     margin: auto;
     a {
       img.logo {
@@ -30,6 +30,10 @@ header {
     .top {
       display: flex;
       vertical-align: bottom;
+
+      .menu {
+        display: none;
+      }
 
       .search {
         padding: 0.5rem 1rem;
@@ -53,6 +57,14 @@ header {
           }
         }
       }
+
+      .rwd-search {
+        display: none;
+        height: 0;
+        overflow: hidden;
+        transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
+
       .user {
         padding: 0.5rem 1rem;
 
@@ -67,10 +79,17 @@ header {
           height: 5vh;
         }
       }
+
+      .rwd-nav {
+        display: none;
+        height: 0;
+        overflow: hidden;
+        transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
     }
   }
   section.nav-list {
-    width: 70vw;
+    width: 70%;
     margin: auto;
     nav {
       padding: 0.7rem 0;
@@ -99,6 +118,7 @@ header {
 }
 
 section.banner {
+  margin-top: 0.5rem;
   text-align: center;
   background-color: $themeColor;
 
@@ -106,30 +126,17 @@ section.banner {
     color: white;
     font-size: 2rem;
     letter-spacing: 0.5rem;
-    margin: 1rem 0;
+    padding: 1rem 0;
   }
 
-  section.banner {
-    text-align: center;
-    background-color: $themeColor;
+  .swiper {
+    .swiper-wrapper {
+      margin-bottom: 1rem;
+      .swiper-slide {
+        cursor: pointer;
 
-    h1 {
-      font-size: 1.75rem;
-    }
-    .swiper {
-      .swiper-wrapper {
-        .swiper-slide {
-          margin: 0 auto;
-          font-size: 18px;
-          background: $themeColor;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-
-          img {
-            width: 100%;
-            display: block;
-          }
+        img {
+          border-radius: 15px;
         }
       }
     }
@@ -137,15 +144,17 @@ section.banner {
 }
 
 section.news {
-  // background: url("./picture/seamless.png");
   padding: 1rem;
+
+  .md-news-title {
+    display: none;
+  }
   .content {
-    width: 70vw;
+    width: 70%;
     margin: auto;
     display: flex;
     justify-content: center;
     border: 3px solid $themeColor;
-    // background-color: white;
 
     .main {
       width: 50vw;
@@ -162,7 +171,7 @@ section.news {
       }
 
       p {
-        font-size: 1.35rem;
+        font-size: 1.3rem;
       }
     }
 
@@ -215,7 +224,7 @@ section.news {
 }
 
 .new-item-title {
-  width: 70vw;
+  width: 70%;
   margin: auto;
   h1 {
     color: $secondColor;
@@ -228,7 +237,7 @@ section.new-item {
   background-color: $thirdColor;
 
   .items {
-    width: 70vw;
+    width: 70%;
     margin: auto;
     .cards {
       display: flex;
@@ -284,11 +293,12 @@ section.preorder {
   overflow: hidden;
   .second-swiper {
     .swiper-wrapper {
-      width: 70vw;
+      width: 70%;
       padding: 2rem;
 
       .swiper-slide {
         width: 8vw;
+        cursor: pointer;
         img {
           display: block;
           width: 100%;
@@ -308,7 +318,7 @@ section.preorder {
 
 section.brand {
   display: flex;
-  width: 70vw;
+  width: 70%;
   justify-content: space-evenly;
   margin: 3.5rem auto;
 
@@ -343,7 +353,7 @@ section.brand {
 }
 
 section.product {
-  width: 70vw;
+  width: 70%;
   margin: auto;
   .product-top {
     display: flex;
@@ -374,7 +384,7 @@ section.product {
   }
 
   .cards {
-    width: 70vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 1rem 0;
@@ -428,7 +438,7 @@ section.product {
 footer {
   background-color: $themeColor;
   .footer-content {
-    width: 70vw;
+    width: 70%;
     margin: 1rem auto 0 auto;
     padding: 1rem 0;
     display: flex;
@@ -486,7 +496,11 @@ footer {
   background-color: white;
   color: $themeColor;
   border-radius: 50%;
-  // z-index: 1;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  content: "";
 }
 
 .film,
@@ -501,18 +515,19 @@ footer {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 21;
 
   button {
-    width: 50px;
-    height: 50px;
+    width: 44px;
+    height: 44px;
+    line-height: 44px;
     cursor: pointer;
     position: absolute;
     top: 300px;
     right: 400px;
     border-radius: 50%;
     color: white;
-    background-color: rgb(153, 146, 146);
+    background-color: rgb(164, 159, 154);
     border: none;
     font-size: 2rem;
   }
@@ -523,5 +538,426 @@ footer {
     position: absolute;
     top: 300px;
     left: 533px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  header {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    section.logo {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+
+      a {
+        display: inline-block;
+        margin: auto;
+        img.logo {
+          width: 100%;
+          height: 100px;
+        }
+      }
+
+      .top {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 0.1rem;
+        padding: 0.5rem 0;
+        border-top: 3px solid $themeColor;
+        border-bottom: 3px solid $themeColor;
+        position: relative;
+        .menu {
+          display: flex;
+          width: 40px;
+          height: 40px;
+          background-color: transparent;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+          margin: 0 1rem;
+
+          position: relative;
+          span {
+            width: 84%;
+            height: 4px;
+            background-color: $secondColor;
+            transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            position: absolute;
+            &:nth-child(1) {
+              top: 7px;
+            }
+
+            &:nth-child(3) {
+              top: 29px;
+            }
+          }
+        }
+
+        .search {
+          padding: 0 1rem;
+
+          img {
+            height: 40px;
+          }
+          input {
+            display: none;
+          }
+        }
+
+        .rwd-search {
+          display: block;
+          position: absolute;
+          top: 100%;
+
+          width: 100%;
+          background-color: $thirdColor;
+
+          input {
+            display: block;
+            width: 200px;
+            height: 45px;
+            margin: 0.2rem auto;
+          }
+
+          &.open {
+            height: 55px;
+          }
+        }
+
+        .user,
+        .cart {
+          padding: 0 1rem;
+
+          img {
+            height: 40px;
+          }
+        }
+
+        .rwd-nav {
+          display: block;
+          position: absolute;
+          top: 100%;
+
+          background-color: rgba(255, 255, 255, 0.9);
+          width: 100%;
+          ul {
+            li {
+              list-style-type: none;
+              padding: 1.2rem;
+              border-bottom: 1px solid $themeColor;
+              a {
+                color: $secondColor;
+                font-size: 1.5rem;
+                text-decoration: none;
+              }
+            }
+          }
+          &.open {
+            height: 400px;
+          }
+        }
+      }
+    }
+
+    section.nav-list {
+      display: none;
+    }
+  }
+
+  .swiper-wrapper {
+    margin-bottom: 0;
+    .swiper-slide {
+      img {
+        width: 100%;
+      }
+    }
+  }
+
+  section.news {
+    width: 100%;
+    padding: 0;
+    margin-top: 1.5rem;
+    .md-news-title {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 0.6rem;
+      h1 {
+        display: inline-block;
+        color: $secondColor;
+        margin-right: auto;
+        span {
+          color: $themeColor;
+        }
+      }
+      a {
+        display: inline-block;
+        text-decoration: none;
+        line-height: 35.5px;
+        font-size: 1.25rem;
+        color: $secondColor;
+        background-color: $thirdColor;
+        border-radius: 5px;
+      }
+    }
+    .content {
+      width: 100%;
+      margin: auto;
+      display: flex;
+      flex-wrap: wrap;
+
+      .main {
+        width: 100%;
+
+        padding: 1.1rem;
+        display: flex;
+
+        img {
+          width: 100%;
+          display: block;
+          object-fit: cover;
+        }
+
+        p {
+          font-size: 1rem;
+        }
+      }
+
+      .other {
+        background-color: white;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        .other-card {
+          padding: 0.6rem;
+          display: flex;
+          border: none;
+          img {
+            display: block;
+            width: 100%;
+          }
+
+          p {
+            font-size: 1rem;
+          }
+        }
+
+        .more {
+          display: none;
+        }
+      }
+    }
+  }
+
+  .new-item-title {
+    width: 100%;
+    margin: 0.5rem 0;
+    h1 {
+      color: $secondColor;
+      font-size: 1.5rem;
+      letter-spacing: normal;
+    }
+  }
+
+  section.new-item {
+    background-color: $thirdColor;
+
+    .items {
+      width: 100%;
+      padding: 1rem 0;
+      .cards {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 0.7rem;
+        .card {
+          width: 33.333333%;
+
+          margin: 0 0.1rem;
+
+          div.newtag {
+            width: 30px;
+            height: 30px;
+            // position: absolute;
+            top: 0;
+            right: 0;
+            // background-color: $fourColor;
+            font-size: 0.7rem;
+            // border-radius: 50%;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            // color: white;
+          }
+        }
+      }
+    }
+  }
+
+  .preorder-title {
+    letter-spacing: normal;
+
+    padding: 1rem 0;
+    font-size: 1rem;
+  }
+
+  section.brand {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    margin: 1rem 0;
+
+    .brand-card {
+      margin: 0.75rem 0;
+      .pic {
+        width: 160px;
+        height: 160px;
+      }
+
+      p {
+        font-size: 1rem;
+      }
+    }
+  }
+
+  section.product {
+    width: 100%;
+
+    .product-top {
+      // display: flex;
+      h1 {
+        // color: $secondColor;
+        font-size: 1.5rem;
+        // margin-right: auto;
+      }
+      a {
+        // display: inline-block;
+        font-size: 1.2rem;
+        // padding: 0.25rem 1.25rem;
+        // text-decoration: none;
+        // color: white;
+        // background-color: $themeColor;
+        // border-radius: 10px;
+        // &:hover {
+        //   transform: scale(1.2);
+        //   transition: all 0.3s ease;
+        // }
+      }
+    }
+
+    .cards {
+      width: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      padding: 0;
+      .card {
+        width: 187px;
+        // height: 43vh;
+        // display: flex;
+        // flex-direction: column;
+        padding: 0.25rem;
+        margin-bottom: 0.75rem;
+        // background-color: $thirdColor;
+        // transition: 0.3s;
+        .pic {
+          img {
+            // display: block;
+            // width: 100%;
+            height: 200px;
+            // object-fit: cover;
+          }
+        }
+
+        .price {
+          // margin-top: auto;
+          // display: flex;
+
+          p {
+            font-size: 1.1rem;
+            // margin-right: auto;
+          }
+          // button {
+          //   padding: 0.25rem 0.5rem;
+          //   color: white;
+          //   background-color: $themeColor;
+          //   cursor: pointer;
+          //   border: none;
+          // }
+        }
+
+        // &:hover {
+        //   background-color: rgb(255, 236, 197);
+        //   transform: scale(1.05);
+        //   box-shadow: 15px 15px 5px rgba(0, 0, 0, 0.356);
+        // }
+      }
+    }
+  }
+
+  footer {
+    // background-color: $themeColor;
+    .footer-content {
+      width: 100%;
+      // margin: 1rem auto 0 auto;
+      // padding: 1rem 0;
+      display: flex;
+      flex-wrap: wrap;
+      .link {
+        ul {
+          display: none;
+        }
+      }
+
+      .mail {
+        order: -1;
+        margin: auto;
+
+        .social-logo {
+          display: flex;
+          justify-content: center;
+        }
+      }
+    }
+  }
+
+  .film,
+  .film2,
+  .film3,
+  .film4,
+  .film5 {
+    button {
+      top: 30%;
+      right: 0px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 233px;
+
+      top: 35%;
+      left: 0;
+      right: 0;
+    }
+  }
+}
+
+.cross {
+  span {
+    &:nth-child(1) {
+      top: 18px !important;
+      transform: rotate(45deg);
+    }
+
+    &:nth-child(2) {
+      transform: scale(0);
+    }
+
+    &:nth-child(3) {
+      top: 18px !important;
+      transform: rotate(135deg);
+    }
   }
 }
