--- a/_general.scss
+++ b/_general.scss
@@ -23,6 +23,10 @@ header {
       display: flex;
       vertical-align: bottom;
 
+      .menu {
+        display: none;
+      }
+
       .search {
         padding: 0.5rem 1rem;
 
@@ -45,6 +49,14 @@ header {
           }
         }
       }
+
+      .rwd-search {
+        display: none;
+        height: 0;
+        overflow: hidden;
+        transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      }
+
       .user {
         padding: 0.5rem 1rem;
 
@@ -58,6 +70,13 @@ header {
         img {
           height: 5vh;
         }
+      }
+
+      .rwd-nav {
+        display: none;
+        height: 0;
+        overflow: hidden;
+        transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
       }
     }
   }
@@ -140,6 +159,177 @@ footer {
           padding: 0.3rem 1rem;
         }
       }
+    }
+  }
+}
+
+@media screen and (max-width: 415px) {
+  header {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    section.logo {
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+
+      a {
+        display: inline-block;
+        margin: auto;
+        img.logo {
+          width: 100%;
+          height: 100px;
+        }
+      }
+
+      .top {
+        display: flex;
+        width: 100%;
+        margin-top: 0.3rem;
+        justify-content: space-around;
+        padding: 0.5rem 0;
+        border-top: 3px solid $themeColor;
+        border-bottom: 3px solid $themeColor;
+        .menu {
+          display: flex;
+          width: 40px;
+          height: 40px;
+          background-color: transparent;
+          flex-direction: column;
+          justify-content: space-evenly;
+          align-items: center;
+          margin: 0 1rem;
+
+          position: relative;
+          span {
+            width: 84%;
+            height: 4px;
+            background-color: $secondColor;
+            transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            position: absolute;
+            &:nth-child(1) {
+              top: 7px;
+            }
+
+            &:nth-child(3) {
+              top: 29px;
+            }
+          }
+        }
+
+        .search {
+          padding: 0 1rem;
+
+          img {
+            height: 40px;
+          }
+          input {
+            display: none;
+          }
+        }
+
+        .rwd-search {
+          display: block;
+          position: absolute;
+          top: 100%;
+
+          width: 100%;
+          background-color: $thirdColor;
+
+          input {
+            display: block;
+            width: 200px;
+            height: 45px;
+            margin: 0.2rem auto;
+          }
+
+          &.open {
+            height: 55px;
+          }
+        }
+
+        .user,
+        .cart {
+          padding: 0 1rem;
+
+          img {
+            height: 40px;
+          }
+        }
+
+        .rwd-nav {
+          display: block;
+          position: absolute;
+          top: 100%;
+
+          background-color: rgba(255, 255, 255, 0.9);
+          width: 100%;
+          ul {
+            li {
+              list-style-type: none;
+              padding: 1.2rem;
+              border-bottom: 1px solid $themeColor;
+              a {
+                color: $secondColor;
+                font-size: 1.5rem;
+                text-decoration: none;
+              }
+            }
+          }
+          &.open {
+            height: 400px;
+          }
+        }
+      }
+    }
+
+    section.nav-list {
+      display: none;
+    }
+  }
+
+  footer {
+    // background-color: $themeColor;
+    .footer-content {
+      width: 100%;
+      // margin: 1rem auto 0 auto;
+      // padding: 1rem 0;
+      display: flex;
+      flex-wrap: wrap;
+      .link {
+        ul {
+          display: none;
+        }
+      }
+
+      .mail {
+        order: -1;
+        margin: auto;
+
+        .social-logo {
+          display: flex;
+          justify-content: center;
+        }
+      }
+    }
+  }
+}
+
+.cross {
+  span {
+    &:nth-child(1) {
+      top: 18px !important;
+      transform: rotate(45deg);
+    }
+
+    &:nth-child(2) {
+      transform: scale(0);
+    }
+
+    &:nth-child(3) {
+      top: 18px !important;
+      transform: rotate(135deg);
     }
   }
 }
