--- a/about.css
+++ b/about.css
@@ -24,6 +24,9 @@ header section.logo .top {
   display: flex;
   vertical-align: bottom;
 }
+header section.logo .top .menu {
+  display: none;
+}
 header section.logo .top .search {
   padding: 0.5rem 1rem;
 }
@@ -38,6 +41,12 @@ header section.logo .top .search input {
 header section.logo .top .search input:focus {
   outline-color: rgb(255, 151, 9);
 }
+header section.logo .top .rwd-search {
+  display: none;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
 header section.logo .top .user {
   padding: 0.5rem 1rem;
 }
@@ -49,6 +58,12 @@ header section.logo .top .cart {
 }
 header section.logo .top .cart img {
   height: 5vh;
+}
+header section.logo .top .rwd-nav {
+  display: none;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 header section.nav-list {
   width: 70vw;
@@ -119,6 +134,144 @@ footer .footer-content .mail .social-logo {
 }
 footer .footer-content .mail .social-logo .logo {
   padding: 0.3rem 1rem;
+}
+
+@media screen and (max-width: 415px) {
+  header {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 20;
+  }
+  header section.logo {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  header section.logo a {
+    display: inline-block;
+    margin: auto;
+  }
+  header section.logo a img.logo {
+    width: 100%;
+    height: 100px;
+  }
+  header section.logo .top {
+    display: flex;
+    width: 100%;
+    margin-top: 0.3rem;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    border-top: 3px solid rgb(255, 151, 9);
+    border-bottom: 3px solid rgb(255, 151, 9);
+  }
+  header section.logo .top .menu {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 1rem;
+    position: relative;
+  }
+  header section.logo .top .menu span {
+    width: 84%;
+    height: 4px;
+    background-color: rgb(58, 58, 58);
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    position: absolute;
+  }
+  header section.logo .top .menu span:nth-child(1) {
+    top: 7px;
+  }
+  header section.logo .top .menu span:nth-child(3) {
+    top: 29px;
+  }
+  header section.logo .top .search {
+    padding: 0 1rem;
+  }
+  header section.logo .top .search img {
+    height: 40px;
+  }
+  header section.logo .top .search input {
+    display: none;
+  }
+  header section.logo .top .rwd-search {
+    display: block;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background-color: rgb(251, 242, 226);
+  }
+  header section.logo .top .rwd-search input {
+    display: block;
+    width: 200px;
+    height: 45px;
+    margin: 0.2rem auto;
+  }
+  header section.logo .top .rwd-search.open {
+    height: 55px;
+  }
+  header section.logo .top .user,
+  header section.logo .top .cart {
+    padding: 0 1rem;
+  }
+  header section.logo .top .user img,
+  header section.logo .top .cart img {
+    height: 40px;
+  }
+  header section.logo .top .rwd-nav {
+    display: block;
+    position: absolute;
+    top: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 100%;
+  }
+  header section.logo .top .rwd-nav ul li {
+    list-style-type: none;
+    padding: 1.2rem;
+    border-bottom: 1px solid rgb(255, 151, 9);
+  }
+  header section.logo .top .rwd-nav ul li a {
+    color: rgb(58, 58, 58);
+    font-size: 1.5rem;
+    text-decoration: none;
+  }
+  header section.logo .top .rwd-nav.open {
+    height: 400px;
+  }
+  header section.nav-list {
+    display: none;
+  }
+  footer .footer-content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  footer .footer-content .link ul {
+    display: none;
+  }
+  footer .footer-content .mail {
+    order: -1;
+    margin: auto;
+  }
+  footer .footer-content .mail .social-logo {
+    display: flex;
+    justify-content: center;
+  }
+}
+.cross span:nth-child(1) {
+  top: 18px !important;
+  transform: rotate(45deg);
+}
+.cross span:nth-child(2) {
+  transform: scale(0);
+}
+.cross span:nth-child(3) {
+  top: 18px !important;
+  transform: rotate(135deg);
 }
 
 .title {
@@ -192,7 +345,7 @@ section.logo-desc .content .card-2 p.word-2 {
   color: rgb(58, 58, 58);
   position: relative;
   font-size: 1.2rem;
-  right: -75px;
+  right: -55px;
 }
 
 section.map {
@@ -226,4 +379,50 @@ section.address .content ul li {
   color: rgb(58, 58, 58);
   font-size: 1.5rem;
   list-style-type: none;
+}
+
+@media screen and (max-width: 415px) {
+  .title {
+    margin: 1rem auto;
+  }
+  .title p {
+    text-indent: 1rem;
+    text-align: start;
+    font-size: 1.2rem;
+  }
+  section.logo-desc {
+    display: none;
+  }
+  section.map {
+    background-image: url("./picture/seamless.png");
+  }
+  section.map .content {
+    width: 100%;
+    margin: auto;
+  }
+  section.map .content .title {
+    font-size: 0.5rem;
+    text-align: center;
+  }
+  section.map .content .embed {
+    width: 100%;
+    position: relative;
+    aspect-ratio: 4/3;
+  }
+  section.map .content .embed iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  section.address {
+    background-color: rgb(251, 242, 226);
+  }
+  section.address .content {
+    width: 100%;
+  }
+  section.address .content ul li {
+    font-size: 1.3rem;
+  }
 }/*# sourceMappingURL=about.css.map */
