--- a/article.scss
+++ b/article.scss
@@ -154,3 +154,46 @@ section.content {
     border-radius: 10px;
   }
 }
+
+@media screen and (max-width: 415px) {
+  .title {
+    width: 100%;
+    height: auto;
+    // margin: auto;
+    // position: relative;
+    // margin-bottom: 1.5rem;
+    // img {
+    //   width: 100%;
+    //   height: 100%;
+    //   opacity: 0.4;
+    //   object-fit: cover;
+    // }
+    h1 {
+      font-size: 1rem;
+      // color: $secondColor;
+      // position: absolute;
+      top: 30%;
+      left: 0;
+    }
+  }
+
+  section.content {
+    width: 100%;
+    // display: flex;
+    // margin: auto;
+    // justify-content: space-between;
+
+    .main {
+      width: 100%;
+      img {
+        width: 100%;
+        // display: block;
+        // padding: 0.5rem 0;
+      }
+    }
+
+    .other {
+      display: none;
+    }
+  }
+}
