--- a/item.scss
+++ b/item.scss
@@ -64,6 +64,7 @@ section.single-product {
             img {
               display: block;
               width: 100%;
+              height: 140px;
             }
           }
         }
@@ -191,5 +192,166 @@ section.single-product {
     text-decoration: none;
     padding: 0.5rem 1.25rem;
     border-radius: 10px;
+  }
+}
+
+@media screen and (max-width: 415px) {
+  section.single-product {
+    width: 100%;
+    // margin: 3rem auto;
+    // display: flex;
+
+    .list {
+      display: none;
+    }
+
+    .main-area {
+      width: 100%;
+      // border: 5px solid $listColor;
+      .main {
+        display: flex;
+        flex-wrap: wrap;
+        // margin-top: 0.5rem;
+        .product {
+          width: 100%;
+
+          //   margin: 0 auto;
+          .pic {
+            // cursor: pointer;
+            img {
+              // width: 100%;
+              height: 400px;
+              // object-fit: cover;
+            }
+            // margin: 0 0.3rem 1rem 0.3rem;
+          }
+
+          //   .other-pic {
+          //     display: flex;
+          //     background-color: $thirdColor;
+          //     padding: 0.25rem;
+          //     margin: 0 0 0 0.25rem;
+
+          //     .other {
+          //       margin: 0 0.3rem;
+          //       cursor: pointer;
+          //       img {
+          //         display: block;
+          //         width: 100%;
+          //         height: 140px;
+          //       }
+          //     }
+          //   }
+        }
+
+        .content {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+
+          // h1 {
+          //   color: secondColor;
+          //   padding: 0 0.3rem 1rem 0.3rem;
+          //   font-size: 1.6rem;
+          // }
+
+          // .desc {
+          //   flex-grow: 1;
+          //   p {
+          //     color: secondColor;
+          //     padding: 0 0.3rem 1rem 0.3rem;
+          //     text-indent: 1.5rem;
+          //     font-size: 1.2rem;
+          //   }
+          // }
+
+          // .price {
+          //   strong {
+          //     color: $fourColor;
+          //     font-size: 2.5rem;
+          //   }
+          // }
+
+          // .btns {
+          //   display: flex;
+          //   justify-content: center;
+          //   padding: 1rem;
+          //   button.minus,
+          //   .plus {
+          //     font-size: 2rem;
+          //     padding: 0.25rem 0.6rem;
+          //     border-radius: 5px;
+          //   }
+
+          //   button.minus {
+          //     cursor: not-allowed;
+          //   }
+
+          //   button.plus {
+          //     cursor: pointer;
+          //   }
+
+          //   input {
+          //     text-align: center;
+          //     font-size: 1.05rem;
+          //   }
+          // }
+
+          // .purchase {
+          //   display: flex;
+          //   justify-content: space-around;
+
+          //   button.add-cart {
+          //     color: white;
+          //     background-color: $themeColor;
+          //     font-size: 1.5rem;
+          //     padding: 0.5rem;
+          //     border: none;
+          //     border-radius: 10px;
+          //     cursor: pointer;
+          //   }
+
+          //   button.purchase {
+          //     color: white;
+          //     background-color: $fourColor;
+          //     font-size: 1.5rem;
+          //     padding: 0.5rem;
+          //     border: none;
+          //     border-radius: 10px;
+          //     cursor: pointer;
+          //   }
+          // }
+        }
+      }
+
+      // .dash {
+      //   background-color: $listColor;
+      //   height: 10px;
+      //   margin: 1.5rem 0;
+      // }
+
+      // p {
+      //   color: $secondColor;
+      //   font-size: 2rem;
+      // }
+
+      .relate-item {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 1rem 0;
+        .item {
+          width: 190px;
+          height: 150px;
+          margin: 0.25rem;
+          // a {
+          //   img {
+          //     width: 100%;
+          //     height: 100%;
+          //     object-fit: cover;
+          //   }
+          // }
+        }
+      }
+    }
   }
 }
