--- a/products.css
+++ b/products.css
@@ -24,6 +24,9 @@ header section.logo .top {
   display: flex;
   vertical-align: bottom;
 }
+header section.logo .top .menu {
+  display: none;
+}
 header section.logo .top .search {
   padding: 0.5rem 1rem;
 }
@@ -38,6 +41,12 @@ header section.logo .top .search input {
 header section.logo .top .search input:focus {
   outline-color: rgb(255, 151, 9);
 }
+header section.logo .top .rwd-search {
+  display: none;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
 header section.logo .top .user {
   padding: 0.5rem 1rem;
 }
@@ -49,6 +58,12 @@ header section.logo .top .cart {
 }
 header section.logo .top .cart img {
   height: 5vh;
+}
+header section.logo .top .rwd-nav {
+  display: none;
+  height: 0;
+  overflow: hidden;
+  transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 header section.nav-list {
   width: 70vw;
@@ -119,6 +134,144 @@ footer .footer-content .mail .social-logo {
 }
 footer .footer-content .mail .social-logo .logo {
   padding: 0.3rem 1rem;
+}
+
+@media screen and (max-width: 415px) {
+  header {
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 20;
+  }
+  header section.logo {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  header section.logo a {
+    display: inline-block;
+    margin: auto;
+  }
+  header section.logo a img.logo {
+    width: 100%;
+    height: 100px;
+  }
+  header section.logo .top {
+    display: flex;
+    width: 100%;
+    margin-top: 0.3rem;
+    justify-content: space-around;
+    padding: 0.5rem 0;
+    border-top: 3px solid rgb(255, 151, 9);
+    border-bottom: 3px solid rgb(255, 151, 9);
+  }
+  header section.logo .top .menu {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0 1rem;
+    position: relative;
+  }
+  header section.logo .top .menu span {
+    width: 84%;
+    height: 4px;
+    background-color: rgb(58, 58, 58);
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    position: absolute;
+  }
+  header section.logo .top .menu span:nth-child(1) {
+    top: 7px;
+  }
+  header section.logo .top .menu span:nth-child(3) {
+    top: 29px;
+  }
+  header section.logo .top .search {
+    padding: 0 1rem;
+  }
+  header section.logo .top .search img {
+    height: 40px;
+  }
+  header section.logo .top .search input {
+    display: none;
+  }
+  header section.logo .top .rwd-search {
+    display: block;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    background-color: rgb(251, 242, 226);
+  }
+  header section.logo .top .rwd-search input {
+    display: block;
+    width: 200px;
+    height: 45px;
+    margin: 0.2rem auto;
+  }
+  header section.logo .top .rwd-search.open {
+    height: 55px;
+  }
+  header section.logo .top .user,
+  header section.logo .top .cart {
+    padding: 0 1rem;
+  }
+  header section.logo .top .user img,
+  header section.logo .top .cart img {
+    height: 40px;
+  }
+  header section.logo .top .rwd-nav {
+    display: block;
+    position: absolute;
+    top: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 100%;
+  }
+  header section.logo .top .rwd-nav ul li {
+    list-style-type: none;
+    padding: 1.2rem;
+    border-bottom: 1px solid rgb(255, 151, 9);
+  }
+  header section.logo .top .rwd-nav ul li a {
+    color: rgb(58, 58, 58);
+    font-size: 1.5rem;
+    text-decoration: none;
+  }
+  header section.logo .top .rwd-nav.open {
+    height: 400px;
+  }
+  header section.nav-list {
+    display: none;
+  }
+  footer .footer-content {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  footer .footer-content .link ul {
+    display: none;
+  }
+  footer .footer-content .mail {
+    order: -1;
+    margin: auto;
+  }
+  footer .footer-content .mail .social-logo {
+    display: flex;
+    justify-content: center;
+  }
+}
+.cross span:nth-child(1) {
+  top: 18px !important;
+  transform: rotate(45deg);
+}
+.cross span:nth-child(2) {
+  transform: scale(0);
+}
+.cross span:nth-child(3) {
+  top: 18px !important;
+  transform: rotate(135deg);
 }
 
 body {
@@ -277,4 +430,101 @@ section.all-product .product .page .page-next a {
   text-align: center;
   color: white;
   text-decoration: none;
+}
+
+.rwd-list-button {
+  display: none;
+}
+
+@media screen and (max-width: 415px) {
+  section.all-product {
+    width: 100%;
+    margin: 1rem 0;
+    display: block;
+  }
+  section.all-product .list {
+    display: none;
+    width: 100%;
+  }
+  section.all-product .list ul {
+    background-color: rgb(140, 132, 126);
+    width: 70%;
+    text-align: center;
+    position: absolute;
+    top: 100px;
+    left: 60px;
+    transition: all 0.3s ease-in-out;
+  }
+  section.all-product .list ul li {
+    list-style-type: none;
+    padding: 0.5rem 0;
+    border-bottom: 3px solid rgba(58, 58, 58, 0.5);
+  }
+  section.all-product .list ul li a {
+    color: white;
+    text-decoration: none;
+  }
+  section.all-product .product {
+    width: 100%;
+    margin: auto;
+    padding: 0;
+    border: 5px solid rgb(140, 132, 126);
+  }
+  section.all-product .product .top-image {
+    margin: 0.2rem;
+    height: 207px;
+  }
+  section.all-product .product .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0;
+  }
+  section.all-product .product .cards .card {
+    width: 182px;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0.5rem 0;
+    background-color: rgb(251, 242, 226);
+    transition: 0.3s;
+  }
+  section.all-product .product .cards .card .pic img {
+    height: 200px;
+  }
+  section.all-product .product .page .page-first {
+    width: 48px;
+    height: 48px;
+    margin: 0 0.2rem;
+  }
+  section.all-product .product .page .page-other {
+    margin: 0 0.2rem;
+  }
+  section.all-product .product .page .page-next {
+    width: 55px;
+    margin: 0 0.2rem;
+  }
+  .rwd-list-button {
+    display: block;
+    position: fixed;
+    top: 88px;
+    right: 0;
+  }
+  .rwd-list-button button {
+    background-color: rgb(63, 234, 103);
+    color: white;
+    padding: 0.2rem;
+    font-size: 1.1rem;
+    border: none;
+    border-radius: 5px;
+  }
+  .rwd-list {
+    display: block !important;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    z-index: 21;
+  }
 }/*# sourceMappingURL=products.css.map */
